# alpagym-autovla

./: pyproject.toml
src/alpagym_autovla/: bundle.py  inference_model.py
src/alpagym_autovla/configs/experiment/: autovla_local_smoke.yaml
src/alpagym_autovla/configs/policy/: autovla.yaml
